--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -10,9 +10,7 @@ on:
       - "./sub/sub_merge_yaml.yml"
 
   schedule:
-    # - cron: '*/5 * * * *'
-    # 表达式生成  https://crontab.guru/
-    - cron: "0 3,12 * * *"
+   - cron: '0 */3 * * *'
 
 jobs:
   main:
@@ -44,7 +42,7 @@ jobs:
       #     restore-keys: |
       #       ${{ runner.os }}-node-
       - name: Set Timezone
-        run: sudo timedatectl set-timezone 'Asia/Tehran'
+        run: sudo timedatectl set-timezone 'Asia/Shanghai'
       - name: Install Requirements
         run: |
           pip install -r ./utils/requirements.txt
