--- a/utils/speedtest/lite_config.json
+++ b/utils/speedtest/lite_config.json
@@ -5,7 +5,7 @@
     "sortMethod":"rspeed",
     "concurrency":15,
     "testMode":2,
-    "subscription":"https://raw.githubusercontent.com/VPNforWindowsSub/configs/master/sub/sub_merge_base64.txt",
+    "subscription":"https://github.com/qjlxg/configs/raw/refs/heads/master/sub/sub_merge_base64.txt",
     "timeout":12,
     "language":"en",
     "fontSize":24,
