--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -5,9 +5,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    # - cron: '*/5 * * * *'
-    # 表达式生成  https://crontab.guru/
-    - cron: "0 0,12 * * *"
+    - cron: '0 */23 * * *'
 
 jobs:
   deploy:
